2008-07-21  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	Made tag parameters of gtk_text_iter_backward_to_tag_toggle and
	gtk_text_iter_forward_to_tag_toggle nullable.

	* vapi/gtk+-2.0.vapi: regenerated

2008-07-19  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gstreamer-0.10/:

	Fixes to gst_event_new_custom and gst_event_new_navigation,
	based on patch by Thijs Vermeir, fixes bug 543720.

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-19  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gstreamer-0.10/:

	Fixes to gst_element_factory_create and gst_element_factory_make,
	based on patch by Thijs Vermeir, fixes bug 543668.

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-18  Jared Moore  <jaredm@svn.gnome.org>

	* vapi/packages/gstreamer-0.10/:

	Fixed gst_registry_feature_filter binding, fixes bug 543344.

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix various binding issues, based on patches by Thijs Vermeir and
	Jared Moore, fixes bug 543348, bug 543417, and bug 543344

	* vapi/gstreamer-0.10.vapi: regenerated

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valainterfacewriter.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:

	Support [CCode (type = "Foo")] for parameters,
	based on patch by Daniel Svensson, fixes bug 543073

	* vapigen/valagidlparser.vala:

	Add support for ctype metadata attribute for parameters

	* vapi/packages/gtk+-2.0/:

	Fix gtk_menu_shell_append binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:

	Fix symbol dependency calculation for arrays, fixes bug 537255

2008-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valatokentype.vala:

	Add parser support for internal symbol accessibility

2008-07-17  Jared Moore  <jaredm@svn.gnome.org>
